--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
 body{
     margin: 0;
-    background-color: red;
+    background-color: #8f57fd;
+    font-family: 'Muli', sans-serif;
+}
+*{
+    box-sizing: border-box;
 }
