--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -1,5 +1,5 @@
 .header{
-    background-color: #8f57fd;
+    // background-color: #8f57fd;
     width: 100%;
     height: 80px;
     display: flex;
